@@ -94,6 +94,9 @@ qmidictlOptionsForm::qmidictlOptionsForm (
 	QObject::connect(m_ui.DialogButtonBox,
 		SIGNAL(rejected()),
 		SLOT(reject()));
+	QObject::connect(m_ui.DialogButtonBox,
+		SIGNAL(clicked(QAbstractButton *)),
+		SLOT(buttonClick(QAbstractButton *)));
 }
 
 
@@ -121,6 +124,8 @@ void qmidictlOptionsForm::accept (void)
 				pOptions->sInterface.clear();
 			// Save/commit to disk.
 			pOptions->saveOptions();
+			// Clean all dirt...
+			m_iDirtyCount = 0;
 		}
 	}
 
@@ -152,6 +157,19 @@ void qmidictlOptionsForm::reject (void)
 
 	// Just go with dialog rejection...
 	QDialog::reject();
+}
+
+
+// Reset options (generic button slot).
+void qmidictlOptionsForm::buttonClick ( QAbstractButton *pButton )
+{
+	const QDialogButtonBox::ButtonRole buttonRole
+		= m_ui.DialogButtonBox->buttonRole(pButton);
+	if (buttonRole == QDialogButtonBox::ResetRole) {
+		m_ui.InterfaceComboBox->setCurrentIndex(0);
+		m_ui.UdpAddrComboBox->setCurrentIndex(0);
+		m_ui.UdpPortSpinBox->setValue(QMIDICTL_UDP_PORT);
+	}
 }
 
 
